--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "babel-core": "^6.2.0",
     "babel-loader": "^6.2.0",
     "babel-preset-react": "^6.1.18",
-    "webpack": "^1.12.2"
-  },
-  "dependencies": {
+    "webpack": "^1.12.2",
     "flux": "^2.1.1",
     "history": "^1.17.0",
     "jquery": "^2.1.4",
