--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "babel-core": "^6.2.0",
     "babel-loader": "^6.2.0",
     "babel-preset-react": "^6.1.18",
-    "webpack": "^1.12.2",
     "flux": "^2.1.1",
     "history": "^1.17.0",
     "jquery": "^2.1.4",
     "react": "^0.14.2",
     "react-addons-linked-state-mixin": "^0.14.2",
     "react-dom": "^0.14.2",
-    "react-router": "^1.0.0-rc4"
+    "react-modal": "^0.6.1",
+    "react-router": "^1.0.0-rc4",
+    "webpack": "^1.12.2"
   },
   "engines": {
     "node": "4.1.1",
