--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-addons-linked-state-mixin": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-modal": "^0.6.1",
+    "react-progress-button": "^3.2.0",
     "react-router": "^1.0.0-rc4",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.2"
