--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "css-loader": "^0.23.1",
     "flux": "^2.1.1",
     "history": "^1.17.0",
+    "imports-loader": "^0.6.5",
     "jquery": "^2.1.4",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "react": "^0.14.2",
     "react-addons-linked-state-mixin": "^0.14.2",
+    "react-burger-menu": "^1.5.2",
     "react-dom": "^0.14.2",
     "react-modal": "^0.6.1",
     "react-progress-button": "^3.2.0",
