--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-addons-linked-state-mixin": "^0.14.2",
     "react-burger-menu": "^1.5.2",
     "react-dom": "^0.14.2",
+    "react-joyride": "^1.3.4",
     "react-modal": "^0.6.1",
     "react-progress-button": "^3.2.0",
     "react-router": "^1.0.0-rc4",
